harvestr 0.5.2
--------------
* Bug fix for time option not carrying forward.


harvestr 0.5.1
--------------
* Documentation updates:
    + Stripped last remaining references to rsprng.
    + Expanded documentation for `farm`, `plant`, and `gather`
* Version bump to 0.5.1 to avoid possible conflict on github.

harvestr 0.5
------------
* Major bugfix that prevented independent streams, in fact the same stream would be run.
* new tests to prevent that condition again.


harvestr 0.4
------------
* Removed dependence on `rsprng`, now depends on `parallel` base package.
* Removed volatile tests cache timings and parallel.  Moved to examples.
* timing in now optional, controlled with option `harvestr.time`
* caching controlled by option `harvestr.use.cache`
* Support for RNG sub streams with sprout & graft.

harvestr 0.3
------------

Added use_method to help with reference classes as input to harvest.


harvestr 0.2
------------

Added caching.  The cache is an explicit parameter for each function.
        The cache directory is controlled with option("harvestr.cache.dir")
        and defaults to "harvestr-cache" if the opion is not set.
        
Added timing.  Each evaluation is timed and can be extracted from the 'time'
        attribute of each results.
        
Speed improvements through optimizing withpseed.  No longer double evaluates.

Added a vignette that explains the process flow for using harvestr.

harvestr 0.1
------------

harvestr is a package that facilitates the creation
of reproducible parallel simulations.  

The primary functions are:

  * `gather` for generating parallel seeds.
  * `farm` for generating datasets from the paralele seeds.
  * `harvest` for applying an analysis function for each generated data frame,
    including stochastic analysis such as bootstrap or mcmc.