@@ -1,8 +1,8 @@
 Package: harvestr
 Type: Package
 Title: A Parallel Simulation Framework
-Version: 0.5.2
-Date: 2012-08-14
+Version: 0.5.3
+Date: 2012-08-31
 Author: Andrew Redd
 Maintainer: Andrew Redd <andrew.redd@hsc.utah.edu>
 Description: Functions for easy simulation and replicability.
